<resources>
    <string name="app_name">AddaBazi</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="name_btn_login">Login</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="title">AddaBazi</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account? Login </string>
    <string name="name_btn_register">Register</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="password_mismatch">Password and Confirm password doesn\'t matches.</string>
    <string name="donthaveAccount">Do not have account?</string>
    <string name="signUp">Sign Up</string>
    <string name="failed_to_create_profile">Failed to create profile</string>
    <string name="name_btn_logout">Logout</string>
    <string name="name_btn_save">Save</string>
    <string name="pickNewImage">Pick New Image</string>
    <string name="removeImage">Remove Image</string>
    <string name="profile">Profile</string>
    <string name="name_btn_changePassword">Change Password</string>
    <string name="passwordChangedSuccessfully">Password Changed Successfully</string>
    <string name="passwordChangedFailed">Failed to change password</string>
    <string name="resetPasswordInstructionHasBeenSent">Reset Password Instructions has been sent to : %1$s</string>
    <string name="retrySendingReset">Retry</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="retryTimer">Retry in : %1$s</string>
    <string name="resetPasswordEmailSendingFailed">Reset Password Email Sending Failed</string>
    <string name="name_btn_reset">Reset Passwoed</string>
    <string name="loadingPleaseWait">Loading, Please Wait...</string>
    <string name="checkInternetConnection">Check Internet Connection</string>
    <string name="chat">Chat</string>
    <string name="social">Social</string>
    <string name="friends">Friends</string>
    <string name="find">Find</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noChat">Chatlist will be appeared here</string>
    <string name="emptyFriendlist">Friends List will be shown here</string>
    <string name="friend_name_will_be_shown_here">Friend Name will be shown here</string>
    <string name="pressBAckButtonAgainToCloseTheApplication">Press Back Button Again To Close The Application</string>
    <string name="addAsFriend">Add as friend</string>
    <string name="friendRequestHasBeenSentSuccessfully">Successfully Sent Friend Request</string>
    <string name="cancelFriendRequest">Cancel Friend Request</string>
    <string name="canceledFriendRequestSuccessfully">Canceled Friend Request Successully</string>
    <string name="userName">User Name</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="accepted">Accepted</string>
    <string name="failedToAcceptFriendRequest">Failed to accept friend request</string>
    <string name="lastMessage">Last Message</string>
    <string name="messageCounterText">10</string>
    <string name="noChatFound">No Chat Found</string>
    <string name="writeMessage">Write Message...</string>
    <string name="failedToSendMessage">Failed to send message</string>
    <string name="successful">Successful</string>
    <string name="hellowSIrHowAreYou">Hello sir, How are you?</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="video">Video</string>
    <string name="uploading">"Uploading... "</string>
    <string name="uploadProgressText"><![CDATA[Uploading %1&s (%2$s %%)]]></string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="failedToDeleteMessage">\"Failed to delete message :  \"</string>
    <string name="failedToDownloadFile">"Failed to download file : "</string>
    <string name="failedToSendFriendRequest">"Failed To Send Friend Request : "</string>
    <string name="failedToRejectFriendRequest">Failed to reject friend request:  %1$s</string>
    <string name="failedToCancelFriendRequest">Failed to cancel friend request : %1$s</string>
    <string name="failedToSendNotification">Failed To Send Notification : %1$s</string>
    <string name="incomingFriendRequestFrom">Incoming Friend Request From : %1$s</string>
    <string name="incomingFriendRequest">Incoming Friend Request</string>
    <string name="canceledFriendRequestFrom">Canceled Friend Request From : %1$s</string>
    <string name="canceledFriendRequest">Canceled Friend Request</string>
    <string name="rejectedFriendRequestFrom">Rejected Friend Request From : %1$s</string>
    <string name="rejectedFriendRequest">Rejected Friend Request</string>
    <string name="acceptedFriendRequestFrom">Accepted Friend Request From : %1$s</string>
    <string name="acceptedFriendRequest">Accepted Friend Request</string>
    <string name="newMessageFrom">New Message From : %1$s</string>
    <string name="newMessageReceived">New Message Received</string>
    <string name="newImageReceivedFrom">New Image Received From : %1$s</string>
    <string name="newVideoReceivedFrom">New Video Received From : %1$s</string>
    <string name="somethingWentWrong">Something Went Wrong : %1$s</string>
    <string name="offline">offline</string>
    <string name="online">online</string>
    <string name="failedToLoadImage">Failed to load Image %1$s</string>
    <string name="basic">Basic</string>
    <string name="education">Education</string>
    <string name="profession">Profession</string>
    <string name="name">Name : </string>
    <string name="age">Age : </string>
    <string name="dataBaseError">Database Error : %1$s</string>
    <string name="typingStatusTyping">typing</string>
    <string name="email">Email :</string>
    <string name="country">Country :</string>
    <string name="snapNotExists">Snapshot does not exists</string>
    <string name="imageReceived">image received</string>
    <string name="videoReceived">video received</string>
    <string name="edit">Edit</string>
    <string name="hint_enter_age">Enter Age</string>
    <string name="hint_enter_country">Enter Your Country Name</string>
    <string name="profileSuccessfullyUpdated">Profile Updated</string>
    <string name="photos">Photos</string>
    <string name="failedToDeletePhoto">Failed to delete photo</string>
    <string name="successfullyDeletedPhoto">Successfully Deleted</string>
    <string name="shareBtnCLicked">Share Button Clicked</string>
    <string name="sendFriendRequest">Send Friend Request</string>
    <string name="unfriend">Unfriend</string>
    <string name="sendMessage">send Message</string>
    <string name="successFullyRemoved">Removed Friend</string>
    <string name="failedToUnfriend">Failed To Remove Friend %1$s</string>
    <string name="sign_in">Sign in</string>
    <string name="loginSuccessful">Login Successful</string>
</resources>