<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_BasicFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".profile.BasicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/nerko_one_regular"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_nameValue_basicFragment"
            style="@style/styleUserProfileView"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/nerko_one_regular"
            android:text="@string/age"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_ageValue_basicFragment"
            style="@style/styleUserProfileView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/nerko_one_regular"
            android:text="@string/country"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_countryValue_basicFragment"
            style="@style/styleUserProfileView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/nerko_one_regular"
            android:text="@string/email"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_emailValue_basicFragment"
            style="@style/styleUserProfileView" />
    </LinearLayout>


</LinearLayout>