<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".password.ResetPasswordActivity">

    <include
        layout="@layout/custom_progressbar"
        android:id="@+id/customProgressBarID"
        android:visibility="gone"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/default_profile_picture_id"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/default_profile_picture_id">

        <LinearLayout
            android:id="@+id/ll_resetPasswordStatusTextOuter_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/card_border"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="14dp"
            android:visibility="gone"
            tools:visibility="visible">


            <TextView
                android:id="@+id/tv_resetPasswordStstusText_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/resetPasswordInstructionHasBeenSent" />

            <LinearLayout
                android:id="@+id/ll_resetPasswordsbtn_ID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_RetrySendingResetEmail_ID"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="btnResetPasswordClicked"
                    android:paddingLeft="32dp"
                    android:paddingTop="8dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="8dp"
                    android:text="@string/retry" />


                <Button
                    android:id="@+id/btn_ResetPasswordClose_ID"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_margin="8dp"
                    android:layout_marginTop="8dp"
                    android:onClick="btnCloseClicked"
                    android:paddingLeft="32dp"
                    android:paddingTop="8dp"
                    android:paddingRight="32dp"
                    android:paddingBottom="8dp"
                    android:text="@string/close" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_resetPasswordStatusTextInner_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_border"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">


            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Email_ResetPassword_ID"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_email"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnResetID"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:onClick="btnResetPasswordClicked"
                android:paddingLeft="32dp"
                android:paddingTop="8dp"
                android:paddingRight="32dp"
                android:paddingBottom="8dp"
                android:text="@string/name_btn_reset" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>