<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_allViewHolder_sampleLayout_friendRequests"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePicture_friendRequestSampleLayout_ID"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/default_profile_picture"
            android:visibility="visible"
            tools:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_userName_friendRequestSampleLayout_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/userName"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_acceptFriendRequest_friendRequestsSampleLayout_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:text="@string/accept" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_rejectFriendRequest_friendRequestsSampleLayout_ID"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:text="@string/reject"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/progressBar_friendRequestsSampleLayout_ID"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>